@@ -3,18 +3,19 @@ package com.suchika.profile.adapters.persistence;
 import com.suchika.profile.domain.Profile;
 import com.suchika.profile.ports.output.ProfileRepository;
 import jakarta.enterprise.context.ApplicationScoped;
-import jakarta.inject.Inject;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class ProfilePanacheRepository implements ProfileRepository {
 
-    @Inject
-    ProfileDao dao;
+    private final ProfileDao dao;
+
+    public ProfilePanacheRepository(ProfileDao dao) {
+        this.dao = dao;
+    }
 
     @Override
     public Profile save(Profile profile) {
@@ -36,15 +37,15 @@ public class ProfilePanacheRepository implements ProfileRepository {
     public List<Profile> findAll(UUID adminId, Boolean isActive) {
         if (adminId != null && isActive != null) {
             return dao.find("adminId = ?1 and active = ?2", adminId, isActive)
-                .stream().map(ProfileEntity::toDomain).collect(Collectors.toList());
+                .stream().map(ProfileEntity::toDomain).toList();
         } else if (adminId != null) {
             return dao.find("adminId = ?1", adminId)
-                .stream().map(ProfileEntity::toDomain).collect(Collectors.toList());
+                .stream().map(ProfileEntity::toDomain).toList();
         } else if (isActive != null) {
             return dao.find("active = ?1", isActive)
-                .stream().map(ProfileEntity::toDomain).collect(Collectors.toList());
+                .stream().map(ProfileEntity::toDomain).toList();
         } else {
-            return dao.listAll().stream().map(ProfileEntity::toDomain).collect(Collectors.toList());
+            return dao.listAll().stream().map(ProfileEntity::toDomain).toList();
         }
     }
 
